# cr_bayesian_optim

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: paper.yml
cr_bayesian_optim/: __init__.py  bacterial-rods.py  cr_bayesian_optim.pyi  fractal_dim.py  optimization.py  plotting.py  sim_branching.py
data/crm_fit/0001/: settings.toml
docs/source/: documentation.rst  index.rst
docs/source/documentation/: index.rst  sim_branching.rst
docs/source/scripts/: crb_script1.rst  index.rst
paper/: Makefile  main.tex  references.bib
src/: lib.rs
src/sim_branching/: agent.rs  mod.rs  simulation.rs  storage.rs
