[package]
name = "cr_bayesian_optim"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cr_bayesian_optim"
crate-type = ["cdylib"]

[dependencies]
approxim = "0.6.5"
cellular_raza = { version = "0.2.4", features = [ "pyo3", "approx" ] }
nalgebra = { package = "nalgebra-randv09", version="0.33" }
num = "0.4"
pyo3 = { version = "0.24", features = ["serde"] }
pythonize = "0.24.0"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
serde = "1.0.219"
serde_json = "1.0.140"
short_default = "0.1.0"
toml = "0.8.21"
