[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "cr_bayesian_optim"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "scipy",
    "cr-mech-coli==0.5.3",
]

[project.scripts]
crb_fractal_dim = "cr_bayesian_optim:fractal_dim_main"

[tool.maturin]
features = ["pyo3/extension-module"]
